ast/simplepy/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SEMICOLON

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt_list stmt
Rule 3     stmt_list -> stmt
Rule 4     stmt -> simple_stmt
Rule 5     stmt -> compound_stmt
Rule 6     compound_stmt -> if_stmt
Rule 7     compound_stmt -> while_stmt
Rule 8     compound_stmt -> print
Rule 9     simple_stmt -> small_stmt
Rule 10    small_stmt -> test
Rule 11    small_stmt -> flow_stmt
Rule 12    print -> PRINT LPAREN small_stmt RPAREN
Rule 13    flow_stmt -> RETURN
Rule 14    flow_stmt -> BREAK
Rule 15    flow_stmt -> CONTINUE
Rule 16    while_stmt -> WHILE test COLON suite
Rule 17    while_stmt -> WHILE test COLON suite ELSE COLON suite
Rule 18    if_stmt -> IF test COLON suite
Rule 19    if_stmt -> IF test COLON suite ELSE COLON suite
Rule 20    suite -> simple_stmt
Rule 21    suite -> LBRACK stmt_list RBRACK
Rule 22    test -> comparison OR test
Rule 23    test -> comparison AND test
Rule 24    test -> comparison
Rule 25    comparison -> expr GT expr
Rule 26    comparison -> expr LT expr
Rule 27    comparison -> expr GTE expr
Rule 28    comparison -> expr LTE expr
Rule 29    comparison -> expr EQ expr
Rule 30    comparison -> expr NEQ expr
Rule 31    comparison -> expr
Rule 32    expr -> NAME ASSIGN expr
Rule 33    expr -> expr PLUS expr
Rule 34    expr -> expr MINUS expr
Rule 35    expr -> expr TIMES expr
Rule 36    expr -> expr DIVIDE expr
Rule 37    expr -> expr MOD expr
Rule 38    expr -> factor
Rule 39    factor -> PLUS factor
Rule 40    factor -> MINUS factor
Rule 41    factor -> atom_expr
Rule 42    atom_expr -> atom
Rule 43    atom -> LPAREN list_expr RPAREN
Rule 44    atom -> LSQBRACK list_expr RSQBRACK
Rule 45    atom -> name
Rule 46    atom -> number
Rule 47    atom -> string
Rule 48    atom -> TRUE
Rule 49    atom -> FALSE
Rule 50    atom -> NONE
Rule 51    list_expr -> list_expr COMMA atom_expr
Rule 52    list_expr -> atom_expr
Rule 53    name -> NAME
Rule 54    number -> INT
Rule 55    number -> FLOAT
Rule 56    string -> STRING

Terminals, with rules where they appear

AND                  : 23
ASSIGN               : 32
BREAK                : 14
COLON                : 16 17 17 18 19 19
COMMA                : 51
CONTINUE             : 15
DIVIDE               : 36
ELSE                 : 17 19
EQ                   : 29
FALSE                : 49
FLOAT                : 55
GT                   : 25
GTE                  : 27
IF                   : 18 19
INT                  : 54
LBRACK               : 21
LPAREN               : 12 43
LSQBRACK             : 44
LT                   : 26
LTE                  : 28
MINUS                : 34 40
MOD                  : 37
NAME                 : 32 53
NEQ                  : 30
NONE                 : 50
OR                   : 22
PLUS                 : 33 39
PRINT                : 12
RBRACK               : 21
RETURN               : 13
RPAREN               : 12 43
RSQBRACK             : 44
SEMICOLON            : 
STRING               : 56
TIMES                : 35
TRUE                 : 48
WHILE                : 16 17
error                : 

Nonterminals, with rules where they appear

atom                 : 42
atom_expr            : 41 51 52
comparison           : 22 23 24
compound_stmt        : 5
expr                 : 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 33 34 34 35 35 36 36 37 37
factor               : 38 39 40
flow_stmt            : 11
if_stmt              : 6
list_expr            : 43 44 51
name                 : 45
number               : 46
print                : 8
program              : 0
simple_stmt          : 4 20
small_stmt           : 9 12
stmt                 : 2 3
stmt_list            : 1 2 21
string               : 47
suite                : 16 17 17 18 19 19
test                 : 10 16 17 18 19 22 23
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt_list stmt
    (3) stmt_list -> . stmt
    (4) stmt -> . simple_stmt
    (5) stmt -> . compound_stmt
    (9) simple_stmt -> . small_stmt
    (6) compound_stmt -> . if_stmt
    (7) compound_stmt -> . while_stmt
    (8) compound_stmt -> . print
    (10) small_stmt -> . test
    (11) small_stmt -> . flow_stmt
    (18) if_stmt -> . IF test COLON suite
    (19) if_stmt -> . IF test COLON suite ELSE COLON suite
    (16) while_stmt -> . WHILE test COLON suite
    (17) while_stmt -> . WHILE test COLON suite ELSE COLON suite
    (12) print -> . PRINT LPAREN small_stmt RPAREN
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (13) flow_stmt -> . RETURN
    (14) flow_stmt -> . BREAK
    (15) flow_stmt -> . CONTINUE
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    IF              shift and go to state 13
    WHILE           shift and go to state 11
    PRINT           shift and go to state 29
    RETURN          shift and go to state 12
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 15
    NAME            shift and go to state 24
    PLUS            shift and go to state 5
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 34
    LSQBRACK        shift and go to state 3
    TRUE            shift and go to state 27
    FALSE           shift and go to state 4
    NONE            shift and go to state 30
    INT             shift and go to state 1
    FLOAT           shift and go to state 33
    STRING          shift and go to state 21

    string                         shift and go to state 26
    if_stmt                        shift and go to state 2
    expr                           shift and go to state 17
    flow_stmt                      shift and go to state 18
    number                         shift and go to state 7
    atom                           shift and go to state 20
    compound_stmt                  shift and go to state 28
    factor                         shift and go to state 36
    simple_stmt                    shift and go to state 6
    stmt                           shift and go to state 9
    print                          shift and go to state 32
    atom_expr                      shift and go to state 14
    stmt_list                      shift and go to state 22
    program                        shift and go to state 19
    name                           shift and go to state 16
    test                           shift and go to state 35
    comparison                     shift and go to state 8
    while_stmt                     shift and go to state 25
    small_stmt                     shift and go to state 31

state 1

    (54) number -> INT .

    GT              reduce using rule 54 (number -> INT .)
    LT              reduce using rule 54 (number -> INT .)
    GTE             reduce using rule 54 (number -> INT .)
    LTE             reduce using rule 54 (number -> INT .)
    EQ              reduce using rule 54 (number -> INT .)
    NEQ             reduce using rule 54 (number -> INT .)
    PLUS            reduce using rule 54 (number -> INT .)
    MINUS           reduce using rule 54 (number -> INT .)
    TIMES           reduce using rule 54 (number -> INT .)
    DIVIDE          reduce using rule 54 (number -> INT .)
    MOD             reduce using rule 54 (number -> INT .)
    OR              reduce using rule 54 (number -> INT .)
    AND             reduce using rule 54 (number -> INT .)
    IF              reduce using rule 54 (number -> INT .)
    WHILE           reduce using rule 54 (number -> INT .)
    PRINT           reduce using rule 54 (number -> INT .)
    RETURN          reduce using rule 54 (number -> INT .)
    BREAK           reduce using rule 54 (number -> INT .)
    CONTINUE        reduce using rule 54 (number -> INT .)
    NAME            reduce using rule 54 (number -> INT .)
    LPAREN          reduce using rule 54 (number -> INT .)
    LSQBRACK        reduce using rule 54 (number -> INT .)
    TRUE            reduce using rule 54 (number -> INT .)
    FALSE           reduce using rule 54 (number -> INT .)
    NONE            reduce using rule 54 (number -> INT .)
    INT             reduce using rule 54 (number -> INT .)
    FLOAT           reduce using rule 54 (number -> INT .)
    STRING          reduce using rule 54 (number -> INT .)
    $end            reduce using rule 54 (number -> INT .)
    COLON           reduce using rule 54 (number -> INT .)
    RPAREN          reduce using rule 54 (number -> INT .)
    ELSE            reduce using rule 54 (number -> INT .)
    RBRACK          reduce using rule 54 (number -> INT .)
    COMMA           reduce using rule 54 (number -> INT .)
    RSQBRACK        reduce using rule 54 (number -> INT .)


state 2

    (6) compound_stmt -> if_stmt .

    RBRACK          reduce using rule 6 (compound_stmt -> if_stmt .)
    IF              reduce using rule 6 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 6 (compound_stmt -> if_stmt .)
    PRINT           reduce using rule 6 (compound_stmt -> if_stmt .)
    RETURN          reduce using rule 6 (compound_stmt -> if_stmt .)
    BREAK           reduce using rule 6 (compound_stmt -> if_stmt .)
    CONTINUE        reduce using rule 6 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 6 (compound_stmt -> if_stmt .)
    PLUS            reduce using rule 6 (compound_stmt -> if_stmt .)
    MINUS           reduce using rule 6 (compound_stmt -> if_stmt .)
    LPAREN          reduce using rule 6 (compound_stmt -> if_stmt .)
    LSQBRACK        reduce using rule 6 (compound_stmt -> if_stmt .)
    TRUE            reduce using rule 6 (compound_stmt -> if_stmt .)
    FALSE           reduce using rule 6 (compound_stmt -> if_stmt .)
    NONE            reduce using rule 6 (compound_stmt -> if_stmt .)
    INT             reduce using rule 6 (compound_stmt -> if_stmt .)
    FLOAT           reduce using rule 6 (compound_stmt -> if_stmt .)
    STRING          reduce using rule 6 (compound_stmt -> if_stmt .)
    $end            reduce using rule 6 (compound_stmt -> if_stmt .)


state 3

    (44) atom -> LSQBRACK . list_expr RSQBRACK
    (51) list_expr -> . list_expr COMMA atom_expr
    (52) list_expr -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    LPAREN          shift and go to state 34
    LSQBRACK        shift and go to state 3
    TRUE            shift and go to state 27
    FALSE           shift and go to state 4
    NONE            shift and go to state 30
    NAME            shift and go to state 37
    INT             shift and go to state 1
    FLOAT           shift and go to state 33
    STRING          shift and go to state 21

    string                         shift and go to state 26
    atom                           shift and go to state 20
    number                         shift and go to state 7
    name                           shift and go to state 16
    atom_expr                      shift and go to state 38
    list_expr                      shift and go to state 39

state 4

    (49) atom -> FALSE .

    GT              reduce using rule 49 (atom -> FALSE .)
    LT              reduce using rule 49 (atom -> FALSE .)
    GTE             reduce using rule 49 (atom -> FALSE .)
    LTE             reduce using rule 49 (atom -> FALSE .)
    EQ              reduce using rule 49 (atom -> FALSE .)
    NEQ             reduce using rule 49 (atom -> FALSE .)
    PLUS            reduce using rule 49 (atom -> FALSE .)
    MINUS           reduce using rule 49 (atom -> FALSE .)
    TIMES           reduce using rule 49 (atom -> FALSE .)
    DIVIDE          reduce using rule 49 (atom -> FALSE .)
    MOD             reduce using rule 49 (atom -> FALSE .)
    OR              reduce using rule 49 (atom -> FALSE .)
    AND             reduce using rule 49 (atom -> FALSE .)
    IF              reduce using rule 49 (atom -> FALSE .)
    WHILE           reduce using rule 49 (atom -> FALSE .)
    PRINT           reduce using rule 49 (atom -> FALSE .)
    RETURN          reduce using rule 49 (atom -> FALSE .)
    BREAK           reduce using rule 49 (atom -> FALSE .)
    CONTINUE        reduce using rule 49 (atom -> FALSE .)
    NAME            reduce using rule 49 (atom -> FALSE .)
    LPAREN          reduce using rule 49 (atom -> FALSE .)
    LSQBRACK        reduce using rule 49 (atom -> FALSE .)
    TRUE            reduce using rule 49 (atom -> FALSE .)
    FALSE           reduce using rule 49 (atom -> FALSE .)
    NONE            reduce using rule 49 (atom -> FALSE .)
    INT             reduce using rule 49 (atom -> FALSE .)
    FLOAT           reduce using rule 49 (atom -> FALSE .)
    STRING          reduce using rule 49 (atom -> FALSE .)
    $end            reduce using rule 49 (atom -> FALSE .)
    RBRACK          reduce using rule 49 (atom -> FALSE .)
    COLON           reduce using rule 49 (atom -> FALSE .)
    RPAREN          reduce using rule 49 (atom -> FALSE .)
    ELSE            reduce using rule 49 (atom -> FALSE .)
    RSQBRACK        reduce using rule 49 (atom -> FALSE .)
    COMMA           reduce using rule 49 (atom -> FALSE .)


state 5

    (39) factor -> PLUS . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    PLUS            shift and go to state 5
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 34
    LSQBRACK        shift and go to state 3
    TRUE            shift and go to state 27
    FALSE           shift and go to state 4
    NONE            shift and go to state 30
    NAME            shift and go to state 37
    INT             shift and go to state 1
    FLOAT           shift and go to state 33
    STRING          shift and go to state 21

    string                         shift and go to state 26
    factor                         shift and go to state 40
    atom                           shift and go to state 20
    name                           shift and go to state 16
    number                         shift and go to state 7
    atom_expr                      shift and go to state 14

state 6

    (4) stmt -> simple_stmt .

    RBRACK          reduce using rule 4 (stmt -> simple_stmt .)
    IF              reduce using rule 4 (stmt -> simple_stmt .)
    WHILE           reduce using rule 4 (stmt -> simple_stmt .)
    PRINT           reduce using rule 4 (stmt -> simple_stmt .)
    RETURN          reduce using rule 4 (stmt -> simple_stmt .)
    BREAK           reduce using rule 4 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> simple_stmt .)
    NAME            reduce using rule 4 (stmt -> simple_stmt .)
    PLUS            reduce using rule 4 (stmt -> simple_stmt .)
    MINUS           reduce using rule 4 (stmt -> simple_stmt .)
    LPAREN          reduce using rule 4 (stmt -> simple_stmt .)
    LSQBRACK        reduce using rule 4 (stmt -> simple_stmt .)
    TRUE            reduce using rule 4 (stmt -> simple_stmt .)
    FALSE           reduce using rule 4 (stmt -> simple_stmt .)
    NONE            reduce using rule 4 (stmt -> simple_stmt .)
    INT             reduce using rule 4 (stmt -> simple_stmt .)
    FLOAT           reduce using rule 4 (stmt -> simple_stmt .)
    STRING          reduce using rule 4 (stmt -> simple_stmt .)
    $end            reduce using rule 4 (stmt -> simple_stmt .)


state 7

    (46) atom -> number .

    GT              reduce using rule 46 (atom -> number .)
    LT              reduce using rule 46 (atom -> number .)
    GTE             reduce using rule 46 (atom -> number .)
    LTE             reduce using rule 46 (atom -> number .)
    EQ              reduce using rule 46 (atom -> number .)
    NEQ             reduce using rule 46 (atom -> number .)
    PLUS            reduce using rule 46 (atom -> number .)
    MINUS           reduce using rule 46 (atom -> number .)
    TIMES           reduce using rule 46 (atom -> number .)
    DIVIDE          reduce using rule 46 (atom -> number .)
    MOD             reduce using rule 46 (atom -> number .)
    OR              reduce using rule 46 (atom -> number .)
    AND             reduce using rule 46 (atom -> number .)
    IF              reduce using rule 46 (atom -> number .)
    WHILE           reduce using rule 46 (atom -> number .)
    PRINT           reduce using rule 46 (atom -> number .)
    RETURN          reduce using rule 46 (atom -> number .)
    BREAK           reduce using rule 46 (atom -> number .)
    CONTINUE        reduce using rule 46 (atom -> number .)
    NAME            reduce using rule 46 (atom -> number .)
    LPAREN          reduce using rule 46 (atom -> number .)
    LSQBRACK        reduce using rule 46 (atom -> number .)
    TRUE            reduce using rule 46 (atom -> number .)
    FALSE           reduce using rule 46 (atom -> number .)
    NONE            reduce using rule 46 (atom -> number .)
    INT             reduce using rule 46 (atom -> number .)
    FLOAT           reduce using rule 46 (atom -> number .)
    STRING          reduce using rule 46 (atom -> number .)
    $end            reduce using rule 46 (atom -> number .)
    RBRACK          reduce using rule 46 (atom -> number .)
    COLON           reduce using rule 46 (atom -> number .)
    RPAREN          reduce using rule 46 (atom -> number .)
    ELSE            reduce using rule 46 (atom -> number .)
    RSQBRACK        reduce using rule 46 (atom -> number .)
    COMMA           reduce using rule 46 (atom -> number .)


state 8

    (22) test -> comparison . OR test
    (23) test -> comparison . AND test
    (24) test -> comparison .

    OR              shift and go to state 41
    AND             shift and go to state 42
    COLON           reduce using rule 24 (test -> comparison .)
    IF              reduce using rule 24 (test -> comparison .)
    WHILE           reduce using rule 24 (test -> comparison .)
    PRINT           reduce using rule 24 (test -> comparison .)
    RETURN          reduce using rule 24 (test -> comparison .)
    BREAK           reduce using rule 24 (test -> comparison .)
    CONTINUE        reduce using rule 24 (test -> comparison .)
    NAME            reduce using rule 24 (test -> comparison .)
    PLUS            reduce using rule 24 (test -> comparison .)
    MINUS           reduce using rule 24 (test -> comparison .)
    LPAREN          reduce using rule 24 (test -> comparison .)
    LSQBRACK        reduce using rule 24 (test -> comparison .)
    TRUE            reduce using rule 24 (test -> comparison .)
    FALSE           reduce using rule 24 (test -> comparison .)
    NONE            reduce using rule 24 (test -> comparison .)
    INT             reduce using rule 24 (test -> comparison .)
    FLOAT           reduce using rule 24 (test -> comparison .)
    STRING          reduce using rule 24 (test -> comparison .)
    $end            reduce using rule 24 (test -> comparison .)
    ELSE            reduce using rule 24 (test -> comparison .)
    RBRACK          reduce using rule 24 (test -> comparison .)
    RPAREN          reduce using rule 24 (test -> comparison .)


state 9

    (3) stmt_list -> stmt .

    RBRACK          reduce using rule 3 (stmt_list -> stmt .)
    IF              reduce using rule 3 (stmt_list -> stmt .)
    WHILE           reduce using rule 3 (stmt_list -> stmt .)
    PRINT           reduce using rule 3 (stmt_list -> stmt .)
    RETURN          reduce using rule 3 (stmt_list -> stmt .)
    BREAK           reduce using rule 3 (stmt_list -> stmt .)
    CONTINUE        reduce using rule 3 (stmt_list -> stmt .)
    NAME            reduce using rule 3 (stmt_list -> stmt .)
    PLUS            reduce using rule 3 (stmt_list -> stmt .)
    MINUS           reduce using rule 3 (stmt_list -> stmt .)
    LPAREN          reduce using rule 3 (stmt_list -> stmt .)
    LSQBRACK        reduce using rule 3 (stmt_list -> stmt .)
    TRUE            reduce using rule 3 (stmt_list -> stmt .)
    FALSE           reduce using rule 3 (stmt_list -> stmt .)
    NONE            reduce using rule 3 (stmt_list -> stmt .)
    INT             reduce using rule 3 (stmt_list -> stmt .)
    FLOAT           reduce using rule 3 (stmt_list -> stmt .)
    STRING          reduce using rule 3 (stmt_list -> stmt .)
    $end            reduce using rule 3 (stmt_list -> stmt .)


state 10

    (14) flow_stmt -> BREAK .

    RBRACK          reduce using rule 14 (flow_stmt -> BREAK .)
    IF              reduce using rule 14 (flow_stmt -> BREAK .)
    WHILE           reduce using rule 14 (flow_stmt -> BREAK .)
    PRINT           reduce using rule 14 (flow_stmt -> BREAK .)
    RETURN          reduce using rule 14 (flow_stmt -> BREAK .)
    BREAK           reduce using rule 14 (flow_stmt -> BREAK .)
    CONTINUE        reduce using rule 14 (flow_stmt -> BREAK .)
    NAME            reduce using rule 14 (flow_stmt -> BREAK .)
    PLUS            reduce using rule 14 (flow_stmt -> BREAK .)
    MINUS           reduce using rule 14 (flow_stmt -> BREAK .)
    LPAREN          reduce using rule 14 (flow_stmt -> BREAK .)
    LSQBRACK        reduce using rule 14 (flow_stmt -> BREAK .)
    TRUE            reduce using rule 14 (flow_stmt -> BREAK .)
    FALSE           reduce using rule 14 (flow_stmt -> BREAK .)
    NONE            reduce using rule 14 (flow_stmt -> BREAK .)
    INT             reduce using rule 14 (flow_stmt -> BREAK .)
    FLOAT           reduce using rule 14 (flow_stmt -> BREAK .)
    STRING          reduce using rule 14 (flow_stmt -> BREAK .)
    RPAREN          reduce using rule 14 (flow_stmt -> BREAK .)
    $end            reduce using rule 14 (flow_stmt -> BREAK .)
    ELSE            reduce using rule 14 (flow_stmt -> BREAK .)


state 11

    (16) while_stmt -> WHILE . test COLON suite
    (17) while_stmt -> WHILE . test COLON suite ELSE COLON suite
    (22) test -> . comparison OR test
    (23) test -> . comparison AND test
    (24) test -> . comparison
    (25) comparison -> . expr GT expr
    (26) comparison -> . expr LT expr
    (27) comparison -> . expr GTE expr
    (28) comparison -> . expr LTE expr
    (29) comparison -> . expr EQ expr
    (30) comparison -> . expr NEQ expr
    (31) comparison -> . expr
    (32) expr -> . NAME ASSIGN expr
    (33) expr -> . expr PLUS expr
    (34) expr -> . expr MINUS expr
    (35) expr -> . expr TIMES expr
    (36) expr -> . expr DIVIDE expr
    (37) expr -> . expr MOD expr
    (38) expr -> . factor
    (39) factor -> . PLUS factor
    (40) factor -> . MINUS factor
    (41) factor -> . atom_expr
    (42) atom_expr -> . atom
    (43) atom -> . LPAREN list_expr RPAREN
    (44) atom -> . LSQBRACK list_expr RSQBRACK
    (45) atom -> . name
    (46) atom -> . number
    (47) atom -> . string
    (48) atom -> . TRUE
    (49) atom -> . FALSE
    (50) atom -> . NONE
    (53) name -> . NAME
    (54) number -> . INT
    (55) number -> . FLOAT
    (56) string -> . STRING

    NAME            shift and go to state 24
    PLUS            shift and go to state 5
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 34
    LSQBRACK        shift and go to state 3
    TRUE            shift and go to state 27
    FALSE           shift and go to state 4
    NONE            shift and go to state 30
    INT             shift and go to state 1
    FLOAT           shift and go to state 33
    STRING          shift and go to state 21

    string                         shift and go to state 26
    atom_expr                      shift and go to state 14
    expr                           shift and go to state 17
    atom                           shift and go to state 20
    name                           shift and go to state 16
    test                           shift and go to state 43
    comparison                     shift and go to state 8
    number                         shift and go to state 7
    factor                         shift and go to state 36

state 12

    (13) flow_stmt -> RETURN .

    RBRACK          reduce using rule 13 (flow_stmt -> RETURN .)
    IF              reduce using rule 13 (flow_stmt -> RETURN .)
    WHILE           reduce using rule 13 (flow_stmt -> RETURN .)
    PRINT           reduce using rule 13 (flow_stmt -> RETURN .)
    RETURN          reduce using rule 13 (flow_stmt -> RETURN .)
    BREAK           reduce using rule 13 (flow_stmt -> RETURN .)
    CONTINUE        reduce using rule 13 (flow_stmt -> RETURN .)
    NAME            reduce using rule 13 (flow_stmt -> RETURN .)
    PLUS            reduce using rule 13 (flow_stmt -> RETURN .)
    MINUS           reduce using rule 13 (flow_stmt -> RETURN .)
    LPAREN          reduce using rule 13 (flow_stmt -> RETURN .)
    LSQBRACK        reduce using rule 13 (flow_stmt -> RETURN .)
    TRUE            reduce using rule 13 (flow_stmt -> RETURN .)
    FALSE           reduce using rule 13 (flow_stmt -> RETURN .)
    NONE            reduce using rule 13 (flow_stmt -> RETURN .)
    INT             reduce using rule 13 (flow_stmt -> RETURN .)
    FLOAT           reduce using rule 13 (flow_stmt -> RETURN .)
    STRING          reduce using rule 13 (flow_stmt -> RETURN .)
    RPAREN          reduce using rule 13 (flow_stmt -> RETURN .)
    $end            reduce using rule 13 (flow_stmt -> RETURN .)
    ELSE            reduce using rule 13 (flow_stmt -> RETURN .)


state 13
